--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,7 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap'); */
+
+/*@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@900&display=swap');*/
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@900&family=Roboto:wght@100;900&display=swap');
 
 h1 {
-    font-family: 'Montserrat Subrayada';
+    font-family: 'Roboto';
+    font-weight: 100;
+}
+
+h2 {
+    font-family: 'Roboto';
+    font-weight: 900;
 }
 
 
