--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -80,6 +80,14 @@ ul li:before {
     margin:0 5px 0 -15px;
 }
 
+#bennys ul li:before {    
+
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    content: '+';
+    margin:0 5px 0 -15px;
+}
+
 li {
     margin-bottom: 9px;
     font-size: 18px;
@@ -149,10 +157,15 @@ a:hover {
     margin-right: 200px;
 }
 
-#box1 {
+#ltv {
     background-color: #130e5c56;
-    padding-left: 20px;
-    border-radius: 10px;
+    padding: 40px;
+    border-left: white solid 1px;
+    margin-top: 100px;
+}
+
+#bennys {
+    
 }
 
 
