--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -45,6 +45,10 @@ h3 {
     font-weight: 400;
 }
 
+h3::before {
+    font-family: "Font Awesome 5 Brands"; content: "\f099";
+}
+
 h4 {
     font-family: 'Roboto Mono';
     font-weight: 900;
