--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -119,13 +119,14 @@
 
 .timeline-item-content .circle {
     background-color: white;
-    border: 3px solid var(--accent1);
+    border: 1px solid var(--accent1);
     border-radius: 50%;
+    
     position: absolute;
     top: calc(50% - 10px);
-    right: -36.5px;
-    width: 15px;
-    height: 15px;
+    right: -40px;
+    width: 20px;
+    height: 20px;
     z-index: 100;
 }
 
@@ -196,4 +197,26 @@
     .timeline-item-content a::after {
         display: none;
     }
+}
+
+
+/* 
+*********** Labels ***********
+*/
+
+.completed {
+    font-weight: 100;
+    text-decoration: underline 2px;
+    text-decoration-color: #3EB890;
+}
+
+.tl-item::before {
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    content: '*';
+    margin:0 5px 0 -15px;
+}
+
+.bg-success {
+    
 }
