--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -335,11 +335,27 @@ a:hover {
 }
 
 
-#introducing {
-    font-size: 40px;
-}
+/* 
+*********** Horizons ***********
+*/
 
 #col-horizons {
-    background-color: green;
+    background-color: var(--primary);
 }
 
+#sunnyside {
+    margin-top: 1000px;
+}
+
+#drawnby {
+    margin-top: 600px;
+}
+
+.horizon-text {
+    font-family: 'Roboto Mono';
+    font-weight: 100;
+    font-size: 12px;
+    vertical-align: bottom;
+    
+    
+}
