--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -356,6 +356,29 @@ a:hover {
     font-weight: 100;
     font-size: 12px;
     vertical-align: bottom;
-    
-    
+}
+
+/* 
+*********** CTA ***********
+*/
+
+#launching {
+    box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        border-top: 1px solid white;
+        border-right: 1px dashed white;
+        margin: 10px;
+}
+
+#arrow-down {
+    box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        border-right: 1px solid white;
+        margin: 10px;
 }
