--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -362,6 +362,10 @@ a:hover {
 *********** CTA ***********
 */
 
+#cta {
+    margin-bottom: 100px;
+}
+
 #launching {
     box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -370,7 +374,7 @@ a:hover {
         height: 100%;
         border-top: 1px solid white;
         border-right: 1px dashed white;
-        margin: 10px;
+        margin-left: 10px;
 }
 
 #arrow-down {
@@ -381,4 +385,15 @@ a:hover {
         height: 100%;
         border-right: 1px solid white;
         margin: 10px;
+}
+
+#follow {
+    box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        width: 100%;
+        height: 100%;
+        border-bottom: 1px solid white;
+       
+        
 }
