--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,6 +68,12 @@ p {
     font-size: large;
 }
 
+label {
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    font-size: 14px;
+}
+
 ul {
     list-style: none;
     padding: 0px;
@@ -172,6 +178,7 @@ a:hover {
     background-color: #130e5c56;
     padding: 40px;
     border-left: white solid 1px;
+    border-bottom: white solid 1px;
     margin-top: 100px;
 }
     
@@ -201,7 +208,7 @@ a:hover {
     position:absolute;
     width:20px; height: 20px;
     border-color: var(--white); /* or whatever colour */
-    border-style: dashed; /* or whatever style */
+    border-style: solid; /* or whatever style */
     content: ' ';
 }
 #location:before {top:0;left:0;border-width: 1px 0 0 1px}
@@ -372,9 +379,10 @@ a:hover {
         -webkit-box-sizing: border-box;
         width: 100%;
         height: 100%;
-        border-top: 1px solid white;
-        border-right: 1px dashed white;
+        border-left: 1px solid white;
+        border-bottom: 1px solid white;
         margin-left: 10px;
+        padding: 40px;
 }
 
 #arrow-down {
@@ -396,4 +404,15 @@ a:hover {
         border-bottom: 1px solid white;
        
         
+}
+
+#cta2 {
+    background-color: #130e5c56;
+    padding: 40px;
+    border-right: white solid 0px;
+    margin-top: 100px;
+}
+
+#cta-form {
+    margin-top: 50px;
 }
