--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -122,6 +122,10 @@ a:hover {
     color: red;
 }
 
+.navlink:hover {
+    color: red;
+}
+
 .vision {
     font-size: 1.75rem !important;
     font-family: 'Roboto Mono';
@@ -291,9 +295,9 @@ a:hover {
     background-color: var(--primary);
     /*position: fixed;*/
     border-top: #ffffff 1px solid;
-    bottom: 0;
     left: 0;
     width: 100%;
+    bottom:0;
   }
 
 
@@ -446,5 +450,11 @@ a:hover {
 }
 
 .mg-spacer {
-    margin-top: 80px;
+    margin-top: 40px;
+}
+
+.btn-red {
+    background-color: red;
+    border-color: red;
+    color: white;
 }
