--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -190,7 +190,7 @@ a:hover {
 
 #ltv-m {
     background-color: var(--secondary);
-    padding-left: 10px;
+    padding: 10px;
     border-left: white solid 0px;
     border-bottom: white solid 0px;
     margin-top: 100px;
@@ -379,6 +379,9 @@ body > .footer {
     .ookii {
         display: none;
  }
+    #ltv {
+        display: none;
+    }
     
 }
 
