add location mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -98,11 +98,11 @@ ul li:before {
     margin:0 5px 0 -15px;
 }
 
-#location ul li:before {    
+#location-m ul li:before {    
 
     font-family: 'Roboto Mono';
     font-weight: 200;
-    content: '-->';
+    content: '->';
     margin:0 5px 0 -15px;
 }
 
@@ -229,6 +229,15 @@ a:hover {
 #location:after {top:0;right:0;border-width: 1px 1px 0 0}
 #location>:first-child:before {bottom:0;right:0;border-width: 0 1px 1px 0}
 #location>:first-child:after {bottom:0;left:0;border-width: 0 0 1px 1px}
+
+
+/* Mobile View */
+#location-m { 
+    position:relative;
+    border-top: white solid 1px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
 
 
 
@@ -384,6 +393,8 @@ body > .footer {
     }
     
 }
+
+
 
 @media (max-width: 767.98px) { 
     #nav-launch {
