--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -190,8 +190,8 @@ a:hover {
 
 #ltv-m {
     background-color: var(--secondary);
-    padding: 10px;
-    border-left: white solid 0px;
+    padding: 20px;
+    border-left: white solid 1px;
     border-bottom: white solid 0px;
     margin-top: 100px;
 }
@@ -364,49 +364,6 @@ body > .footer {
 }
 
 
-/* 
-*********** Media Queries ***********
-*/
-
-
-
- 
-/* Small devices (landscape phones, less than 768px) */
-
-/* Desktop View */
-@media (min-width: 992px) { 
-    .chiisai {
-        display: none;
- }
- #ltv-m {
-    display: none;
-}
-}
-
-/* Mobile View View */
-@media (max-width: 992px) { 
-    .ookii {
-        display: none;
- }
-    #ltv {
-        display: none;
-    }
-    
-}
-
-
-
-@media (max-width: 767.98px) { 
-    #nav-launch {
-        display: none;
- }
-    #col-2 {
-        display: none;
-}
-    .nakunaru {
-        display: none;
-    }
-}
 
 
 /* 
@@ -522,4 +479,45 @@ body > .footer {
     height: 100vw;
     padding-bottom: 800px;
    
+}
+
+/* 
+*********** Media Queries ***********
+*/
+
+/* Small devices (landscape phones, less than 768px) */
+
+/* Desktop View */
+@media (min-width: 992px) { 
+    .chiisai {
+        display: none;
+ }
+    #ltv-m, #location-m {
+    display: none;
+}
+}
+
+/* Mobile View View */
+@media (max-width: 992px) { 
+    .ookii {
+        display: none;
+ }
+    #ltv, #location {
+        display: none;
+    }
+    
+}
+
+
+
+@media (max-width: 767.98px) { 
+    #nav-launch {
+        display: none;
+ }
+    #col-2 {
+        display: none;
+}
+    .nakunaru {
+        display: none;
+    }
 }
